--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 }
 
 .App-header {
-  background-color: #d3e3fc;
+  background-color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
